
bin_PROGRAMS = \
	bsearch_demo \
	part_trie_demo \
	strie_demo strie_write_demo strie_mmap_demo \
	actrie_demo actrie_write_demo actrie_mmap_demo \
	digit_trie_demo digit_trie_write_demo digit_trie_mmap_demo \
	digit_actrie_demo digit_actrie_write_demo digit_actrie_mmap_demo

include_HEADERS = string_codec.hpp

bsearch_demo_SOURCES = bsearch_demo.cpp
bsearch_demo_CPPFLAGS = -I../include

part_trie_demo_SOURCES = part_trie_demo.cpp
part_trie_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

strie_demo_SOURCES = strie_demo.cpp
strie_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

strie_write_demo_SOURCES = strie_write_demo.cpp
strie_write_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

strie_mmap_demo_SOURCES = strie_mmap_demo.cpp
strie_mmap_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

actrie_demo_SOURCES = actrie_demo.cpp
actrie_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

actrie_write_demo_SOURCES = actrie_write_demo.cpp
actrie_write_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

actrie_mmap_demo_SOURCES = actrie_mmap_demo.cpp
actrie_mmap_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

digit_trie_demo_SOURCES = digit_trie_demo.cpp
digit_trie_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

digit_trie_write_demo_SOURCES = digit_trie_write_demo.cpp
digit_trie_write_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

digit_trie_mmap_demo_SOURCES = digit_trie_mmap_demo.cpp
digit_trie_mmap_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

digit_actrie_demo_SOURCES = digit_actrie_demo.cpp
digit_actrie_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

digit_actrie_write_demo_SOURCES = digit_actrie_write_demo.cpp
digit_actrie_write_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)

digit_actrie_mmap_demo_SOURCES = digit_actrie_mmap_demo.cpp
digit_actrie_mmap_demo_CPPFLAGS = -I../include $(BOOST_CPPFLAGS)
